--- a/src/components/AddRecipeForm/AddRecipeForm.module.css
+++ b/src/components/AddRecipeForm/AddRecipeForm.module.css
@@ -61,11 +61,11 @@
 }
 
 .field:hover, .field:focus {
-    border: 1.50px solid #9b6c43;
+    border: 1.50px solid #344e41;
 }
 
 .field_textarea:hover, .field_textarea:focus {
-    border: 1.50px solid #9b6c43;
+    border: 1.50px solid #344e41;
 }
 
 .field.error {
@@ -113,7 +113,7 @@
     border-radius: 8px;
     padding: 12px 16px;
     width: 100%;
-    background: #9b6c43;
+    background: #344e41;
     border: none;
     font-weight: 600;
     font-size: 16px;
@@ -125,7 +125,7 @@
 
 .btn_add:hover,
 .btn_add:focus {
-    background-color: #6d554b;
+    background-color: #588157;
 }
 
 .cont_ing {
@@ -197,7 +197,7 @@
     border-radius: 8px;
     padding: 12px 16px;
     width: 100%;
-    background: #9b6c43;
+    background: #344e41;
     border: none;
     font-weight: 600;
     font-size: 16px;
@@ -208,7 +208,7 @@
 }
 
 .btn_submit:hover, .btn_submit:focus {
-    background-color: #6d554b;
+    background-color: #588157;
 }
 
 .error {
