--- a/src/components/Filters/Filters.module.css
+++ b/src/components/Filters/Filters.module.css
@@ -42,7 +42,7 @@
   padding: 16px 12px;
   width: 100%;
   max-width: 320px;
-  background: #fff;
+  background: #dad7cd;
   box-shadow: -10px 4px 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -81,7 +81,7 @@
   justify-content: flex-start;
   flex-direction: row;
   gap: 8px;
-  border: 1px solid #d9d9d9;
+  border: 1px solid #000;
   border-radius: 4px;
   padding: 4px 8px;
   width: 296px;
@@ -169,7 +169,7 @@
     border: none;
   }
   .filterSelect {
-    border: 1px solid #d9d9d9;
+    border: 1px solid #000;
     border-radius: 4px;
     padding: 4px 8px;
     width: 179px;
