--- a/src/components/MobileMenu/MobileMenu.module.css
+++ b/src/components/MobileMenu/MobileMenu.module.css
@@ -9,7 +9,7 @@
 /* Меню */
 .mobileMenu {
   position: relative;
-  background-color: #3b1f0a;
+  background-color: #3a5a40;
   height: 100%;
   width: 100%;
   padding: 32px 24px;
@@ -60,7 +60,7 @@
 
 .closeBtn:hover .icon,
 .closeBtn:focus .icon {
-  stroke: #c2854d;
+  stroke: #588157;
 }
 
 /* SVG іконка */
@@ -92,12 +92,12 @@
 
 .link:hover,
 .link:focus {
-  color: #c2854d;
+  color: #a3b18a;
 }
 
 /* Кнопка Register / Add Recipe */
 .mobileButton {
-  background-color: #a86939;
+  background-color: #344e41;
   color: #ffffff;
   font-size: 18px;
   font-weight: 600;
@@ -112,7 +112,7 @@
 
 .mobileButton:hover,
 .mobileButton:focus {
-  background-color: #925c30;
+  background-color: #588157;
 }
 
 /* Блок з аватаркою, імʼям та Logout */
@@ -131,7 +131,7 @@
 
 /* Аватарка */
 .avatar {
-  background-color: #a86939;
+  background-color: #344e41;
   color: #fff;
   font-weight: 600;
   width: 40px;
@@ -158,7 +158,7 @@
 
 .logoutIcon:hover .icon,
 .logoutIcon:focus .icon {
-  stroke: #c2854d;
+  stroke: #588157;
 }
 .separator {
   width: 1px;
