--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -38,11 +38,11 @@
 }
 
 .link:hover {
-  color: #c2854d;
+  color: #a3b18a;
 }
 
 .mobileButton {
-  background-color: #9b6c43;
+  background-color: #344e41;
   color: #fff;
   padding: 12px 16px;
   border: none;
@@ -59,5 +59,5 @@
 }
 
 .mobileButton:hover {
-  background-color: #a96b3a;
+  background-color: #588157;
 }
