--- a/src/components/RecipeCard/RecipeCard.module.css
+++ b/src/components/RecipeCard/RecipeCard.module.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
-  background-color: #faf3e0;
+  background-color: #a3b18a;
   border: 1px solid #e3e3e3;
   border-radius: 16px;
   padding: 12px;
@@ -45,7 +45,7 @@
   display: flex;
   align-items: center;
   gap: 4px;
-  background: #f6f6f6;
+  background: #dad7cd;
   border-radius: 8px;
   padding: 2px 6px;
 }
@@ -58,7 +58,7 @@
 
 .recipeDescCal {
   font-size: 14px;
-  color: #555;
+  color: #000;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   overflow: hidden;
@@ -94,7 +94,7 @@
 }
 
 .learnMoreButton:hover {
-  background-color: #6d554b;
+  background-color: #588157;
   color: #fff;
 }
 .icon {
