--- a/src/components/RegistrationForm/RegistrationForm.module.css
+++ b/src/components/RegistrationForm/RegistrationForm.module.css
@@ -3,11 +3,11 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #fdfdf7;
+  background-color: #dad7cd;
 }
 
 .card {
-  background-color: #faf3e0;
+  background-color: #a3b18a;
   border-radius: 32px;
   padding: 48px 32px;
   width: 522px;
@@ -63,11 +63,11 @@
 }
 
 .input:hover {
-  border: 1px solid #9b6c43;
+  border: 1px solid #344e41;
 }
 
 .input:focus {
-  border: 1px solid #9b6c43;
+  border: 1px solid #344e41;
 }
 
 .visuallyHiddenCheckbox {
@@ -97,7 +97,7 @@
 }
 
 .customCheckbox:hover {
-  border-color: #9b6c43;
+  border-color: #588157;
 }
 
 .visuallyHiddenCheckbox:checked + .customCheckbox::after {
@@ -123,7 +123,7 @@
 }
 
 .customCheckboxLabel:hover {
-  color: #9b6c43;
+  color: #588157;
 }
 
 .error {
@@ -133,7 +133,7 @@
 }
 
 .button {
-  background-color: #9b6c43;
+  background-color: #344e41;
   color: #fff;
   border: none;
   padding: 12px;
@@ -151,11 +151,11 @@
 }
 
 .button:hover {
-  background-color: #563c29;
+  background-color: #588157;
 }
 
 .button:focus {
-  background-color: #563c29;
+  background-color: #588157;
 }
 
 .registerText {
@@ -173,11 +173,11 @@
 }
 
 .registerLink:hover {
-  color: #9b6c43;
+  color: #588157;
 }
 
 .registerLink:focus {
-  color: #9b6c43;
+  color: #588157;
 }
 
 .passwordFieldWrapper {
