--- a/src/components/SuccessSaveModal/SuccessSaveModal.module.css
+++ b/src/components/SuccessSaveModal/SuccessSaveModal.module.css
@@ -9,7 +9,7 @@
 }
 
 .modal {
-  background-color: #faf3e0;
+  background-color: #a3b18a;
   padding: 56px 32px;
   border-radius: 32px;
   position: relative;
@@ -60,7 +60,7 @@
 }
 
 .primaryBtn {
-  background-color: #9b643d;
+  background-color: #344e41;
   color: #fff;
   font-weight: 600;
   font-size: 16px;
@@ -78,7 +78,7 @@
 }
 
 .primaryBtn:hover {
-  background-color: #7d5131;
+  background-color: #588157;
 }
 
 @media (min-width: 393px) and (max-width: 767px) {
