--- a/src/components/AddRecipeForm/AddRecipeForm.module.css
+++ b/src/components/AddRecipeForm/AddRecipeForm.module.css
@@ -49,7 +49,7 @@
 .field {
     display: block;
     width: 100%;
-    border: 1px solid #d9d9d9;
+    border: 1px solid #344e41;
     border-radius: 8px;
     padding: 12px;
     height: 53px;
@@ -61,11 +61,11 @@
 }
 
 .field:hover, .field:focus {
-    border: 1.50px solid #344e41;
+    border: 1.50px solid #588157;
 }
 
 .field_textarea:hover, .field_textarea:focus {
-    border: 1.50px solid #344e41;
+    border: 1.50px solid #588157;
 }
 
 .field.error {
@@ -74,7 +74,7 @@
 .field_textarea {
     display: block;
     width: 100%;
-    border: 1px solid #d9d9d9;
+    border: 1px solid #344e41;
     border-radius: 8px;
     padding: 12px;
     margin-top: 8px;
@@ -93,7 +93,7 @@
 }
 
 .btn_remove {
-    border: 1px solid #d9d9d9;
+    border: 1px solid #344e41;
     border-radius: 8px;
     padding: 12px 16px;
     width: 100%;
@@ -106,7 +106,7 @@
 }
 
 .btn_remove:hover, .btn_remove:focus {
-    background-color: #d9d9d9;
+    background-color: #588157;
 }
 
 .btn_add {
@@ -148,12 +148,12 @@
 .ing_list {
     position: relative;
     display: flex;
-    border-bottom: 1px solid #c5c5c5;;
+    border-bottom: 1px solid #344e41;;
     padding-right: 40px;
 }
 
 .ing_list:first-child {
-    border-top: 1px solid #c5c5c5;;
+    border-top: 1px solid #344e41;;
 }
 
 .ing_sel {
