favoritBtn lofder filters

--- a/src/components/Loading/Loading.module.css
+++ b/src/components/Loading/Loading.module.css
@@ -1,11 +1,12 @@
-/* Loading.module.css */
-.loader {
+.loaderOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
-}
-.comment-wrapper {
-  display: flex !important;
-  justify-content: center;
-  align-items: center;
+  z-index: 9999;
 }
