--- a/src/components/SaveFavoriteButton/SaveFavoriteButton.module.css
+++ b/src/components/SaveFavoriteButton/SaveFavoriteButton.module.css
@@ -105,7 +105,7 @@
   color: white;
 }
 .smallFavoriteButton.active:hover {
-  background-color: #c80000;
+  background-color: #6d554b;
   border: none;
 }
 
