--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -12,6 +12,7 @@
   left: 0;
   width: 100%;
   z-index: 100;
+  height: 74px; /* задаємо висоту */
 }
 
 /* === Контейнер для контенту хедера === */
@@ -22,6 +23,7 @@
   max-width: 393px;
   margin: 0 auto;
   padding: 14px 16px;
+  height: 100%; /* дозволяє дочірнім елементам займати всю висоту */
 }
 
 /* === Логотип === */
@@ -203,7 +205,7 @@
 }
 
 /* === Десктоп (1440px+) === */
-@media (min-width: 1440px) {
+@media screen and (min-width: 1440px) {
   .container {
     padding: 14px 108px;
     max-width: 1440px;
