Revert "add fixed header"

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,6 +1,5 @@
+/* Mobile First: 393px+ */
 .hero {
-  padding-top: 74px;
-  padding-bottom: 98px;
   background-color: #3d2218;
   background-image: linear-gradient(
       to left,
@@ -11,7 +10,7 @@
   background-repeat: no-repeat;
   background-position: top center;
   background-size: cover;
-  margin-top: 68px;
+  padding: 128px 0 98px;
 }
 
 @media (min-resolution: 192dpi) {
@@ -25,12 +24,14 @@
   }
 }
 
+/* Контейнер */
 .heroContainer {
   max-width: 393px;
   margin: 0 auto;
   padding: 0 32px;
 }
 
+/* Внутрішній контент */
 .content {
   display: flex;
   gap: 24px;
@@ -38,6 +39,7 @@
   align-items: flex-start;
 }
 
+/* Заголовок */
 .title {
   color: #fff;
   font-size: 48px;
@@ -49,25 +51,25 @@
 /* Tablet 768px+ */
 @media screen and (min-width: 768px) {
   .hero {
-    padding: 128px 0 98px;
-    padding-top: 74px;
+    padding: 128px 0;
     background-position: top center, center -40px;
   }
 
   .heroContainer {
-    max-width: 768px;
     padding: 0 65px 0 32px;
+  }
+  .heroContainer {
+    max-width: 768px;
   }
 }
 
-/* Desktop 1440px+ */
+/* Desktop 1280px+ */
 @media screen and (min-width: 1440px) {
-  .hero {
-    background-position: top center, center -120px;
-  }
-
   .heroContainer {
     min-width: 1440px;
     padding-left: 108px;
+  }
+  .hero {
+    background-position: top center, center -120px;
   }
 }
