--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,7 +3,6 @@
 
   position: relative;
   z-index: 100;
-  height: 74px; /* задаємо висоту */
 }
 
 .container {
@@ -13,7 +12,6 @@
   max-width: 393px;
   margin: 0 auto;
   padding: 14px 16px;
-  height: 100%; /* дозволяє дочірнім елементам займати всю висоту */
 }
 
 .logo {
@@ -199,9 +197,10 @@
   }
 }
 
-/* === Десктоп (1440px+) === */
-@media screen and (min-width: 1440px) {
-
+/* === Desktop (1440px+) === */
+@media (min-width: 1440px) {
+  .header {
+  }
   .container {
     padding: 14px 108px;
     max-width: 1440px;
